--- a/src/notebook.ipynb
+++ b/src/notebook.ipynb
@@ -45,8 +45,11 @@
     "filepath = \"../DataAttentionDCA\\\\data\\\\PF00014\\\\PF00014_mgap6.fasta.gz\"; \n",
     "lambdaK = 0.005; lambdaV = lambdaK;  H = 10; alg_var = define_var(filepath,H,lambdaK,lambdaV);\n",
     "K = rand(alg_var.N, alg_var.N, alg_var.H); V = rand(alg_var.q, alg_var.H); tmp = StgArr(alg_var);\n",
-    "@time lz = get_loss_and_grad_zyg(K, V, alg_var);\n",
-    "@time lz2 = get_loss_and_grad_zyg2(K, V, alg_var, tmp);\n",
+    "en = rand(alg_var.q, alg_var.N, length(alg_var.W)); data_en = rand(alg_var.N, length(alg_var.W));\n",
+    "loss = rand(alg_var.N) ; reg_k = rand(alg_var.N);\n",
+    "@benchmark lz = get_loss_and_grad_zyg(K, V, alg_var)\n",
+    "@benchmark lz2 = get_loss_and_grad_zyg2(K, V, alg_var, tmp)\n",
+    "@benchmark lz3 = get_loss_and_grad_zyg3(K, V, alg_var, en, data_en, loss, reg_k)\n",
     "@time az,bz = gradient((p1,p2)->get_loss_and_grad_zyg(p1, p2, alg_var),K,V);\n",
     "@time az2,bz2 = gradient((p1,p2)->get_loss_and_grad_zyg2(p1, p2, alg_var, tmp),K,V);\n",
     "println([sum(az .-az2),sum(bz .-bz2),lz-lz2])\n",
@@ -64,7 +67,22 @@
    "source": [
     "using HopfieldDCA\n",
     "filepath = \"../DataAttentionDCA\\\\data\\\\PF00014\\\\PF00014_mgap6.fasta.gz\"; lambdaK = 0.005; lambdaV = lambdaK;  \n",
-    "H = 2; alg_var = define_var(filepath,H,lambdaK,lambdaV); m = trainer(alg_var, 5);\n"
+    "H = 2; alg_var = define_var(filepath,H,lambdaK,lambdaV); m = trainer(alg_var, 5);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using HopfieldDCA\n",
+    "filepath = \"../DataAttentionDCA\\\\data\\\\PF00014\\\\PF00014_mgap6.fasta.gz\"; \n",
+    "\n",
+    "for h in [2, 10, 30, 50, 70]\n",
+    "    for lambda\n",
+    "lambdaK = 0.005; lambdaV = lambdaK;  \n",
+    "H = 20; alg_var = define_var(filepath,H,lambdaK,lambdaV); m = trainer(alg_var, 5);"
    ]
   }
  ],
