--- a/src/notebook.ipynb
+++ b/src/notebook.ipynb
@@ -41,22 +41,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using HopfieldDCA, BenchmarkTools, DCAUtils, PyPlot, Zygote, Tullio\n",
-    "filepath = \"../DataAttentionDCA\\\\data\\\\PF00014\\\\PF00014_mgap6.fasta.gz\"; \n",
-    "lambdaK = 0.005; lambdaV = lambdaK;  H = 10; alg_var = define_var(filepath,H,lambdaK,lambdaV);\n",
+    "using HopfieldDCA#, BenchmarkTools#, DCAUtils, PyPlot, Zygote, Tullio\n",
+    "using DCAUtils\n",
+    "filepath = \"../DataAttentionDCA\\\\data\\\\PF00014\\\\PF00014_mgap6.fasta.gz\"; Z = read_fasta_alignment(filepath,0.99);#[:,1:100];\n",
+    "lambdaK = 0.005; lambdaV = lambdaK;  H = 2; alg_var = HopPlmVar(H,lambdaK,lambdaV, Z);\n",
+    "#lambdaK = 0.005; lambdaV = lambdaK;  H = 2; alg_var = define_var(filepath,H,lambdaK,lambdaV);\n",
     "K = rand(alg_var.N, alg_var.N, alg_var.H); V = rand(alg_var.q, alg_var.H); tmp = StgArr(alg_var);\n",
     "en = rand(alg_var.q, alg_var.N, length(alg_var.W)); data_en = rand(alg_var.N, length(alg_var.W));\n",
     "loss = rand(alg_var.N) ; reg_k = rand(alg_var.N);\n",
     "@benchmark lz = get_loss_and_grad_zyg(K, V, alg_var)\n",
     "@benchmark lz2 = get_loss_and_grad_zyg2(K, V, alg_var, tmp)\n",
-    "@benchmark lz3 = get_loss_and_grad_zyg3(K, V, alg_var, en, data_en, loss, reg_k)\n",
+    "@benchmark lz3 = get_loss_and_grad_zyg3($K, $V, $alg_var, $en, $data_en, $loss, $reg_k)\n",
     "@time az,bz = gradient((p1,p2)->get_loss_and_grad_zyg(p1, p2, alg_var),K,V);\n",
     "@time az2,bz2 = gradient((p1,p2)->get_loss_and_grad_zyg2(p1, p2, alg_var, tmp),K,V);\n",
     "println([sum(az .-az2),sum(bz .-bz2),lz-lz2])\n",
     "\n",
+    "K = rand(alg_var.N, alg_var.N, alg_var.H); V = rand(alg_var.q, alg_var.H); tmp = StgArr(alg_var);\n",
+    "en = rand(alg_var.q, alg_var.N, length(alg_var.W)); data_en = rand(alg_var.N, length(alg_var.W));\n",
+    "loss = rand(alg_var.N) ; reg_k = rand(alg_var.N);\n",
     "@time a,b,l = get_loss_and_grad(K, V, alg_var);\n",
     "@time a2,b2,l2 = get_loss_and_grad2(K, V, alg_var, tmp);\n",
-    "println([sum(a .-a2), sum(b .-b2), l-l2])"
+    "@time az,bz = gradient((p1,p2)->get_loss_and_grad_zyg(p1, p2, alg_var),K,V);\n",
+    "println([sum(a .-a2), sum(b .-b2), l-l2])\n",
+    "println([sum(a .-az), sum(b .-bz)])\n",
+    "\n",
+    "using HopfieldDCA#, BenchmarkTools#, DCAUtils, PyPlot, Zygote, Tullio\n",
+    "using DCAUtils\n",
+    "filepath = \"../DataAttentionDCA\\\\data\\\\PF00014\\\\PF00014_mgap6.fasta.gz\"; Z = read_fasta_alignment(filepath,0.99);#[:,1:100];\n",
+    "lambdaK = 0.005; lambdaV = lambdaK;  H = 2; alg_var = HopPlmVar(H,lambdaK,lambdaV, Z);\n",
+    "#lambdaK = 0.005; lambdaV = lambdaK;  H = 2; alg_var = define_var(filepath,H,lambdaK,lambdaV);\n",
+    "K = rand(alg_var.N, alg_var.N, alg_var.H); V = rand(alg_var.q, alg_var.H); tmp = StgArr(alg_var);\n",
+    "@time a,b,l = get_loss_and_grad(K, V, alg_var);\n",
+    "\n",
+    "\n",
+    "@benchmark lz = [get_loss_and_grad_zyg(K, V, alg_var) for i in 1:10]\n",
+    "@benchmark lz2 = [get_loss_and_grad_zyg2(K, V, alg_var, tmp) for i in 1:10]\n",
+    "@benchmark lz3 = [get_loss_and_grad_zyg3(K, V, alg_var, en, data_en, loss, reg_k) for i in 1:10]\n"
    ]
   },
   {
@@ -67,7 +87,7 @@
    "source": [
     "using HopfieldDCA\n",
     "filepath = \"../DataAttentionDCA\\\\data\\\\PF00014\\\\PF00014_mgap6.fasta.gz\"; lambdaK = 0.005; lambdaV = lambdaK;  \n",
-    "H = 2; alg_var = define_var(filepath,H,lambdaK,lambdaV); m = trainer(alg_var, 5);"
+    "H = 1; alg_var = define_var(filepath,H,lambdaK,lambdaV); m = trainer(alg_var, 5);"
    ]
   },
   {
@@ -80,23 +100,26 @@
     "filepath = \"../DataAttentionDCA\\\\data\\\\PF00014\\\\PF00014_mgap6.fasta.gz\"; \n",
     "\n",
     "for h in [2, 10, 30, 50, 70]\n",
-    "    for lambda\n",
-    "lambdaK = 0.005; lambdaV = lambdaK;  \n",
-    "H = 20; alg_var = define_var(filepath,H,lambdaK,lambdaV); m = trainer(alg_var, 5);"
+    "    for lambda in [10^-5, 10^-3, 10^-2, 10^-1]\n",
+    "\n",
+    "        lambdaK = lambda; lambdaV = lambdaK; alg_var = define_var(filepath,h,lambdaK,lambdaV);\n",
+    "        @time m = trainer(alg_var, 100);\n",
+    "    end\n",
+    "end"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.9.3",
+   "display_name": "Julia 1.10.0",
    "language": "julia",
-   "name": "julia-1.9"
+   "name": "julia-1.10"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.9.3"
+   "version": "1.10.0"
   }
  },
  "nbformat": 4,
