--- a/src/notebook.ipynb
+++ b/src/notebook.ipynb
@@ -65,8 +65,7 @@
     "println([sum(a .-a2), sum(b .-b2), l-l2])\n",
     "println([sum(a .-az), sum(b .-bz)])\n",
     "\n",
-    "using HopfieldDCA#, BenchmarkTools#, DCAUtils, PyPlot, Zygote, Tullio\n",
-    "using DCAUtils\n",
+    "using HopfieldDCA; import DCAUtils: read_fasta_alignment;#, BenchmarkTools#, DCAUtils, PyPlot, Zygote, Tullio\n",
     "filepath = \"../DataAttentionDCA\\\\data\\\\PF00014\\\\PF00014_mgap6.fasta.gz\"; Z = read_fasta_alignment(filepath,0.99);#[:,1:100];\n",
     "lambdaK = 0.005; lambdaV = lambdaK;  H = 2; alg_var = HopPlmVar(H,lambdaK,lambdaV, Z);\n",
     "#lambdaK = 0.005; lambdaV = lambdaK;  H = 2; alg_var = define_var(filepath,H,lambdaK,lambdaV);\n",
