--- a/src/notebook.ipynb
+++ b/src/notebook.ipynb
@@ -41,10 +41,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using HopfieldDCA#, BenchmarkTools#, DCAUtils, PyPlot, Zygote, Tullio\n",
-    "using DCAUtils\n",
+    "@btime lf = get_loss_zyg_francesco(alg.K,alg.V,alg)\n",
+    "@btime lp = get_loss_pagnani(alg.K,alg.V,alg)\n",
+    "@btime l = get_loss_zyg(alg.K,alg.V,alg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@btime gf = gradient((p1, p2) -> get_loss_zyg_francesco(p1,p2, alg), alg.K, alg.V);\n",
+    "@btime g = gradient((p1, p2) -> get_loss_zyg(p1,p2, alg), alg.K, alg.V);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using HopfieldDCA\n",
     "filepath = \"../DataAttentionDCA\\\\data\\\\PF00014\\\\PF00014_mgap6.fasta.gz\"; Z = read_fasta_alignment(filepath,0.99);#[:,1:100];\n",
-    "lambdaK = 0.005; lambdaV = lambdaK;  H = 2; alg_var = HopPlmVar(H,lambdaK,lambdaV, Z);\n",
+    "H = 2; alg_var = HopPlmVar(H, filepath);\n",
     "#lambdaK = 0.005; lambdaV = lambdaK;  H = 2; alg_var = define_var(filepath,H,lambdaK,lambdaV);\n",
     "K = rand(alg_var.N, alg_var.N, alg_var.H); V = rand(alg_var.q, alg_var.H); tmp = StgArr(alg_var);\n",
     "en = rand(alg_var.q, alg_var.N, length(alg_var.W)); data_en = rand(alg_var.N, length(alg_var.W));\n",
