--- a/src/notebook.ipynb
+++ b/src/notebook.ipynb
@@ -51,8 +51,9 @@
    "outputs": [],
    "source": [
     "using HopfieldDCA\n",
-    "filepath = \"../DataAttentionDCA\\\\data\\\\PF00014\\\\PF00014_mgap6.fasta.gz\"; H = 2; alg_var = HopPlmVar(H, filepath);\n",
-    "@time m = trainer(alg, 120, η = 0.01, λ = 0.01, savefile=\"..\\\\HopfieldDCA.jl\\\\H$(H)η$(η)λ$(λ).txt\");\n",
+    "filepath = \"../DataAttentionDCA\\\\data\\\\PF00014\\\\PF00014_mgap6.fasta.gz\"; H = 32; alg_var = HopPlmVar(H, filepath);\n",
+    "η = 0.01; λ = 0.01; @time m = trainer(alg, 1000, η = η, λ = λ, savefile=\"..\\\\HopfieldDCA.jl\\\\H$(H)η$(η)λ$(λ).txt\");\n",
+    "l = map(x->parse(Float64,x[5]), split.(split(read(\"log/H32η0.01λ0.01.txt\", String), \"\\n\"))[1:end-1,:])[:];\n",
     "#lambdaK = 0.005; lambdaV = lambdaK;  H = 2; alg_var = define_var(filepath,H,lambdaK,lambdaV);\n",
     "K = rand(alg_var.N, alg_var.N, alg_var.H); V = rand(alg_var.q, alg_var.H); tmp = StgArr(alg_var);\n",
     "en = rand(alg_var.q, alg_var.N, length(alg_var.W)); data_en = rand(alg_var.N, length(alg_var.W));\n",
@@ -82,24 +83,6 @@
    "outputs": [],
    "source": [
     "m = trainer(alg, 1);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using HopfieldDCA\n",
-    "filepath = \"../DataAttentionDCA\\\\data\\\\PF00014\\\\PF00014_mgap6.fasta.gz\"; \n",
-    "\n",
-    "for h in [2, 10, 30, 50, 70]\n",
-    "    for lambda in [10^-5, 10^-3, 10^-2, 10^-1]\n",
-    "\n",
-    "        lambdaK = lambda; lambdaV = lambdaK; alg_var = define_var(filepath,h,lambdaK,lambdaV);\n",
-    "        @time m = trainer(alg_var, 100);\n",
-    "    end\n",
-    "end"
    ]
   }
  ],
