--- a/src/notebook.ipynb
+++ b/src/notebook.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using HopfieldDCA\n",
+    "using HopfieldDCA; import Flux: gradient\n",
     "filepath = \"../DataAttentionDCA/data/PF00014/PF00014_mgap6.fasta.gz\"; H = 32; alg = HopPlmVar(H, filepath);tmp = HopfieldDCA.StgArr(alg); _w = alg.W ./ sum(alg.W);\n",
     "n_ep = 3; η = 0.5; λ = 0.001;\n",
     "@time m,n = trainer_J(alg, n_ep, η = η, λ = λ);\n",
