--- a/src/notebook.ipynb
+++ b/src/notebook.ipynb
@@ -48,17 +48,19 @@
     "#code for analytical gradient\n",
     "using HopfieldDCA; using Tullio; import Flux: gradient;\n",
     "filepath = \"../DataAttentionDCA/data/PF00014/PF00014_mgap6.fasta.gz\"; H = 2; alg = HopPlmVar_gen(H, filepath); _w = alg.W ./ sum(alg.W); @tullio delta_j[a, j, m] := a == alg.Z[j, m] (a in 1:alg.q); tmp = Stg(alg);\n",
-    "@time gt = get_anal_grad(alg.K, alg.V, alg.Z, _w, tmp, delta_j);\n",
+    "@time gt = get_anal_grad(alg.K, alg.V, alg.Z, _w, tmp);\n",
     "@time gk,gv = gradient((p1,p2)->get_loss_J(p1,p2, alg.Z, _w), alg.K, alg.V);\n",
     "sum(gt.K[:].-gk[:])\n",
     "sum(gt.V[:].-gv[:])\n",
     "import BenchmarkTools: @btime\n",
-    "@btime gkt,gvt = get_anal_grad(alg.K, alg.V, alg.Z, _w, tmp, delta_j);\n",
+    "@btime gkt,gvt = get_anal_grad(alg.K, alg.V, alg.Z, _w, tmp);\n",
     "@btime gk,gv = gradient((p1,p2)->get_loss_J(p1,p2, alg.Z, _w), alg.K, alg.V);\n",
-    "n_ep = 3; η = 0.5; λ = 0.001;\n",
+    "n_ep = 30; η = 0.5; λ = 0.001;\n",
     "@time m,n = trainer_J(alg, n_ep, η = η, λ = λ);\n",
     "@time m,n = trainer(alg, n_ep, η = η, λ = λ);\n",
-    "\n"
+    "@time m,n = trainer_J(alg, n_ep, η = η, λ = λ);\n",
+    "@time m,n = trainer(alg, n_ep, η = η, λ = λ);\n",
+    "println(\"the end\")\n"
    ]
   },
   {
