implemented type flexibility

--- a/src/notebook.ipynb
+++ b/src/notebook.ipynb
@@ -15,28 +15,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using HopfieldDCA; import Enzyme: gradient;\n",
-    "filepath = \"../DataAttentionDCA/data/PF00014/PF00014_mgap6.fasta.gz\"; H = 2; alg = HopPlmVar(H, filepath);tmp = HopfieldDCA.StgArr(alg); _w = alg.W ./ sum(alg.W); KK = zeros(alg.N,alg.N,H);\n",
-    "#gradient((p1,p2)->get_loss_J_tmp(p1,p2, alg.Z, _w, tmp, KK), alg.K, alg.V)\n",
-    "n_ep = 3; η = 0.5; λ = 0.001;\n",
-    "@time m,n = trainer_J(alg, n_ep, η = η, λ = λ);\n",
+    "grad_k11 = tmp.grad_k11; prob = tmp.prob; v_prod = tmp.v_prod;\n",
+    "@time @tullio verbose=2 grad_k11[i, j, m, h] = prob[a, i, m]*v_prod[a, j, m, h] * (j!=i);\n",
+    "Grad_k11 = permutedims(grad_k11,(4,1,2,3)); Prob = prob; V_prod = permutedims(v_prod,(4,1,2,3));\n",
+    "@time @tullio verbose=2 Grad_k11[h, i, j, m] = Prob[a, i, m]*V_prod[h, a, j, m] * (j!=i);\n",
     "\n",
-    "n_ep = 3; η = 0.5; λ = 0.001;\n",
-    "@time m,n = trainer(alg, n_ep, η = η, λ = λ);\n",
-    "gradient((p1,p2)->get_loss_J_tmp(p1,p2, alg.Z, _w, tmp, KK), alg.K, alg.V)\n",
-    "n_ep = 3; η = 0.5; λ = 0.001;\n",
-    "@time m,n = trainer_J(alg, n_ep, η = η, λ = λ);\n",
-    "@time m,n = trainer_J(alg, n_ep, η = η, λ = λ, \n",
-    "    savefile=\"log_J/H$(H)η$(η)λ$(λ)T$(n_ep).txt\");\n",
-    "tmp = HopfieldDCA.StgArr(alg); _w = alg.W ./ sum(alg.W);\n",
-    "@time get_loss_J(alg.K, alg.V, alg.Z, _w);\n",
-    "@time get_loss_J_tmp(alg.K, alg.V, alg.Z, _w, tmp)\n",
+    "grad_k11 = tmp.grad_k11; prob = tmp.prob; v_prod = tmp.v_prod;\n",
+    "@btime @tullio grad_k11[i, j, m, h] = prob[a, i, m]*v_prod[a, j, m, h] * (j!=i);\n",
+    "@btime @tullio grad_k11[i, j, m, h] = prob[a, i, m]*v_prod[a, j, m, h];\n",
+    "@btime @tullio grad_k11[i, j, m, h] = grad_k11[i, j, m, h] * (j!=i);\n",
     "\n",
     "\n",
     "\n",
-    "println(\"Done\")\n",
-    "@time m,n = trainer(alg, n_ep, η = η, λ = λ, \n",
-    "    savefile=\"log/H$(H)η$(η)λ$(λ)T$(n_ep).txt\");\n"
+    "\n",
+    "\n",
+    "Grad_k11 = permutedims(grad_k11,(1,3,4,2)); Prob = permutedims(prob, (1,3,2)); V_prod = permutedims(v_prod,(1,3,4,2));\n",
+    "@time @tullio Grad_k11[i, m, h, j] = Prob[a, m, i]*V_prod[a, m, h, j] * (j!=i);\n",
+    "\n"
    ]
   },
   {
@@ -47,11 +42,12 @@
    "source": [
     "#code for analytical gradient\n",
     "using HopfieldDCA; using Tullio; import Flux: gradient;\n",
-    "filepath = \"../DataAttentionDCA/data/PF00014/PF00014_mgap6.fasta.gz\"; H = 2; alg = HopPlmVar_gen(H, filepath); _w = alg.W ./ sum(alg.W); @tullio delta_j[a, j, m] := a == alg.Z[j, m] (a in 1:alg.q); tmp = Stg(alg);\n",
+    "filepath = \"../DataAttentionDCA/data/PF00014/PF00014_mgap6.fasta.gz\"; H = 15; alg = HopPlmVar_gen(H, filepath;T=Float64); _w = alg.W ./ sum(alg.W); @tullio delta_j[a, j, m] := a == alg.Z[j, m] (a in 1:alg.q); tmp = Stg(alg);\n",
     "@time gt = get_anal_grad(alg.K, alg.V, alg.Z, _w, tmp);\n",
     "@time gk,gv = gradient((p1,p2)->get_loss_J(p1,p2, alg.Z, _w), alg.K, alg.V);\n",
     "sum(gt.K[:].-gk[:])\n",
     "sum(gt.V[:].-gv[:])\n",
+    "\n",
     "import BenchmarkTools: @btime\n",
     "@btime gkt,gvt = get_anal_grad(alg.K, alg.V, alg.Z, _w, tmp);\n",
     "@btime gk,gv = gradient((p1,p2)->get_loss_J(p1,p2, alg.Z, _w), alg.K, alg.V);\n",
