--- a/src/notebook.ipynb
+++ b/src/notebook.ipynb
@@ -15,15 +15,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "using HopfieldDCA; using Tullio; import BenchmarkTools: @btime;\n",
+    "filepath = \"../DataAttentionDCA/data/PF00014/PF00014_mgap6.fasta.gz\"; H = 32; alg = HopPlmVar_gen(H, filepath;T=Float64); _w = alg.W ./ sum(alg.W); tmp = Stg(alg);\n",
+    "\n",
     "grad_k11 = tmp.grad_k11; prob = tmp.prob; v_prod = tmp.v_prod;\n",
-    "@time @tullio verbose=2 grad_k11[i, j, m, h] = prob[a, i, m]*v_prod[a, j, m, h] * (j!=i);\n",
+    "@time @tullio grad_k11[i, j, m, h] = prob[a, i, m]*v_prod[a, j, m, h] * (j!=i);\n",
     "Grad_k11 = permutedims(grad_k11,(4,1,2,3)); Prob = prob; V_prod = permutedims(v_prod,(4,1,2,3));\n",
     "@time @tullio verbose=2 Grad_k11[h, i, j, m] = Prob[a, i, m]*V_prod[h, a, j, m] * (j!=i);\n",
     "\n",
     "grad_k11 = tmp.grad_k11; prob = tmp.prob; v_prod = tmp.v_prod;\n",
-    "@btime @tullio grad_k11[i, j, m, h] = prob[a, i, m]*v_prod[a, j, m, h] * (j!=i);\n",
-    "@btime @tullio grad_k11[i, j, m, h] = prob[a, i, m]*v_prod[a, j, m, h];\n",
-    "@btime @tullio grad_k11[i, j, m, h] = grad_k11[i, j, m, h] * (j!=i);\n",
+    "@time @tullio grad_k11[i, j, m, h] = prob[a, i, m]*v_prod[a, j, m, h] * (j!=i);\n",
+    "grad_k11 = tmp.grad_k11[:,:,1,:]; prob = tmp.prob[:,:,1]; v_prod = tmp.v_prod[:,:,1,:];\n",
+    "@btime @tullio grad_k11[i, j, h] = prob[a, i]*v_prod[a, j, h] * (j!=i);\n",
+    "\n",
     "\n",
     "\n",
     "\n",
