--- a/src/notebook.ipynb
+++ b/src/notebook.ipynb
@@ -15,27 +15,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using HopfieldDCA; using Tullio; import BenchmarkTools: @btime;\n",
-    "filepath = \"../DataAttentionDCA/data/PF00014/PF00014_mgap6.fasta.gz\"; H = 32; alg = HopPlmVar_gen(H, filepath;T=Float64); _w = alg.W ./ sum(alg.W); tmp = Stg(alg);\n",
     "\n",
-    "grad_k11 = tmp.grad_k11; prob = tmp.prob; v_prod = tmp.v_prod;\n",
-    "@time @tullio grad_k11[i, j, m, h] = prob[a, i, m]*v_prod[a, j, m, h] * (j!=i);\n",
-    "Grad_k11 = permutedims(grad_k11,(4,1,2,3)); Prob = prob; V_prod = permutedims(v_prod,(4,1,2,3));\n",
-    "@time @tullio verbose=2 Grad_k11[h, i, j, m] = Prob[a, i, m]*V_prod[h, a, j, m] * (j!=i);\n",
-    "\n",
-    "grad_k11 = tmp.grad_k11; prob = tmp.prob; v_prod = tmp.v_prod;\n",
-    "@time @tullio grad_k11[i, j, m, h] = prob[a, i, m]*v_prod[a, j, m, h] * (j!=i);\n",
-    "grad_k11 = tmp.grad_k11[:,:,1,:]; prob = tmp.prob[:,:,1]; v_prod = tmp.v_prod[:,:,1,:];\n",
-    "@btime @tullio grad_k11[i, j, h] = prob[a, i]*v_prod[a, j, h] * (j!=i);\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "Grad_k11 = permutedims(grad_k11,(1,3,4,2)); Prob = permutedims(prob, (1,3,2)); V_prod = permutedims(v_prod,(1,3,4,2));\n",
-    "@time @tullio Grad_k11[i, m, h, j] = Prob[a, m, i]*V_prod[a, m, h, j] * (j!=i);\n",
-    "\n"
+    "using HopfieldDCA\n",
+    "filepath = \"../DataAttentionDCA/data/PF00014/PF00014_mgap6.fasta.gz\"; H = 32; alg = HopPlmVar_gen(H, filepath);tmp = Stg(alg);\n",
+    "n_ep = 20; η = 0.5; λ = 0.001;\n",
+    "@time m,n = trainer(alg, n_ep, η = η, λ = λ);\n",
+    "@time m,n = trainer_J(alg, n_ep, η = η, λ = λ);\n",
+    "println(\"test_done\")\n"
    ]
   },
   {
@@ -44,14 +30,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#code for analytical gradient\n",
+    "#code for testing analytical gradient\n",
     "using HopfieldDCA; using Tullio; import Flux: gradient;\n",
-    "filepath = \"../DataAttentionDCA/data/PF00014/PF00014_mgap6.fasta.gz\"; H = 15; alg = HopPlmVar_gen(H, filepath;T=Float64); _w = alg.W ./ sum(alg.W); @tullio delta_j[a, j, m] := a == alg.Z[j, m] (a in 1:alg.q); tmp = Stg(alg);\n",
+    "filepath = \"../DataAttentionDCA/data/PF00014/PF00014_mgap6.fasta.gz\"; H =32; alg = HopPlmVar_gen(H, filepath;T=Float64); _w = alg.W ./ sum(alg.W); tmp = Stg(alg);\n",
     "@time gt = get_anal_grad(alg.K, alg.V, alg.Z, _w, tmp);\n",
     "@time gk,gv = gradient((p1,p2)->get_loss_J(p1,p2, alg.Z, _w), alg.K, alg.V);\n",
     "sum(gt.K[:].-gk[:])\n",
     "sum(gt.V[:].-gv[:])\n",
-    "\n",
     "import BenchmarkTools: @btime\n",
     "@btime gkt,gvt = get_anal_grad(alg.K, alg.V, alg.Z, _w, tmp);\n",
     "@btime gk,gv = gradient((p1,p2)->get_loss_J(p1,p2, alg.Z, _w), alg.K, alg.V);\n",
