--- a/src/notebook.ipynb
+++ b/src/notebook.ipynb
@@ -32,11 +32,15 @@
    "source": [
     "#code for testing analytical gradient\n",
     "using HopfieldDCA; using Tullio; import Flux: gradient;\n",
-    "filepath = \"../DataAttentionDCA/data/PF00014/PF00014_mgap6.fasta.gz\"; H =32; alg = HopPlmVar_gen(H, filepath;T=Float64); _w = alg.W ./ sum(alg.W); tmp = Stg(alg);\n",
+    "filepath = \"../DataAttentionDCA/data/PF00014/PF00014_mgap6.fasta.gz\"; H = 2 ; alg = HopPlmVar_gen(H, filepath;T=Float64); _w = alg.W ./ sum(alg.W); \n",
+    "@time tmp = Stg(alg); @time small_tmp = SmallStg(alg);\n",
+    "@time gs = get_new_grad(alg.K, alg.V, alg.Z, _w, small_tmp, 10);\n",
     "@time gt = get_anal_grad(alg.K, alg.V, alg.Z, _w, tmp);\n",
     "@time gk,gv = gradient((p1,p2)->get_loss_J(p1,p2, alg.Z, _w), alg.K, alg.V);\n",
-    "sum(gt.K[:].-gk[:])\n",
-    "sum(gt.V[:].-gv[:])\n",
+    "\n",
+    "(sum(gt.dK[:].-gk[:]), sum(gt.dV[:].-gv[:]))\n",
+    "(sum(gs.dK[:].-gk[:]), sum(gs.dV[:].-gv[:]))\n",
+    "(sum(gs.dK[:].-gt.dK[:]), sum(gs.dV[:].-gt.dV[:]))\n",
     "import BenchmarkTools: @btime\n",
     "@btime gkt,gvt = get_anal_grad(alg.K, alg.V, alg.Z, _w, tmp);\n",
     "@btime gk,gv = gradient((p1,p2)->get_loss_J(p1,p2, alg.Z, _w), alg.K, alg.V);\n",
