added full hopf

--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -18,8 +18,7 @@
     "\n",
     "using HopfieldDCA\n",
     "filepath = \"../DataAttentionDCA/data/PF00014/PF00014_mgap6.fasta.gz\"; H = 32; alg = HopPlmVar_gen(H, filepath);tmp = Stg(alg);\n",
-    "n_ep = 20; η = 0.5; λ = 0.001;\n",
-    "@time m,n = trainer(alg, n_ep, η = η, λ = λ);\n",
+    "n_ep = 3; η = 0.5; λ = 0.001;\n",
     "@time m,n = trainer_J(alg, n_ep, η = η, λ = λ);\n",
     "println(\"test_done\")\n"
    ]
@@ -30,17 +29,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "folders = [\"../DataAttentionDCA/data/PF00014/\",\n",
+    "\"../DataAttentionDCA/data/PF00035/\",\n",
+    "\"../DataAttentionDCA/data/PF00072/\",\n",
+    "\"../DataAttentionDCA/data/PF00076/\",\n",
+    "\"../DataAttentionDCA/data/PF00169/\",\n",
+    "\"../DataAttentionDCA/data/PF00595/\",\n",
+    "\"../DataAttentionDCA/data/PF00677/\",\n",
+    "\"../DataAttentionDCA/data/PF00684/\",\n",
+    "\"../DataAttentionDCA/data/PF00763/\",\n",
+    "\"../DataAttentionDCA/data/PF13354/\"]; seq_paths = [\"../DataAttentionDCA/data/PF00014/PF00014_mgap6.fasta.gz\",\n",
+    "       \"../DataAttentionDCA/data/PF00035/PF00035_full.fasta\",\n",
+    "       \"../DataAttentionDCA/data/PF00072/PF00072_mgap6.fasta.gz\",\n",
+    "       \"../DataAttentionDCA/data/PF00076/PF00076_mgap6.fasta.gz\",\n",
+    "       \"../DataAttentionDCA/data/PF00169/PF00169_full.fasta\",\n",
+    "       \"../DataAttentionDCA/data/PF00595/PF00595_mgap6.fasta.gz\",\n",
+    "       \"../DataAttentionDCA/data/PF00677/PF00677_full.fasta\",\n",
+    "       \"../DataAttentionDCA/data/PF00684/PF00684_full.fasta\",\n",
+    "       \"../DataAttentionDCA/data/PF00763/PF00763_full.fasta\",\n",
+    "       \"../DataAttentionDCA/data/PF13354/PF13354_w0_ref_seqs.fasta.gz\"];\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#code for testing analytical gradient\n",
     "using HopfieldDCA; using Tullio; import Flux: gradient;\n",
-    "filepath = \"../DataAttentionDCA/data/PF00014/PF00014_mgap6.fasta.gz\"; H = 2 ; alg = HopPlmVar_gen(H, filepath;T=Float64); _w = alg.W ./ sum(alg.W); \n",
-    "@time tmp = Stg(alg); @time small_tmp = SmallStg(alg);\n",
-    "@time gs = get_new_grad(alg.K, alg.V, alg.Z, _w, small_tmp, 10);\n",
+    "filepath = \"../DataAttentionDCA/data/PF00014/PF00014_mgap6.fasta.gz\"; H =32; alg = HopPlmVar_gen(H, filepath;T=Float64); _w = alg.W ./ sum(alg.W); tmp = Stg(alg);\n",
     "@time gt = get_anal_grad(alg.K, alg.V, alg.Z, _w, tmp);\n",
     "@time gk,gv = gradient((p1,p2)->get_loss_J(p1,p2, alg.Z, _w), alg.K, alg.V);\n",
-    "\n",
-    "(sum(gt.dK[:].-gk[:]), sum(gt.dV[:].-gv[:]))\n",
-    "(sum(gs.dK[:].-gk[:]), sum(gs.dV[:].-gv[:]))\n",
-    "(sum(gs.dK[:].-gt.dK[:]), sum(gs.dV[:].-gt.dV[:]))\n",
+    "sum(gt.K[:].-gk[:])\n",
+    "sum(gt.V[:].-gv[:])\n",
     "import BenchmarkTools: @btime\n",
     "@btime gkt,gvt = get_anal_grad(alg.K, alg.V, alg.Z, _w, tmp);\n",
     "@btime gk,gv = gradient((p1,p2)->get_loss_J(p1,p2, alg.Z, _w), alg.K, alg.V);\n",
