--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -16,8 +16,8 @@
    "outputs": [],
    "source": [
     "\n",
-    "using HopfieldDCA\n",
-    "filepath = \"../DataAttentionDCA/data/PF00014/PF00014_mgap6.fasta.gz\"; H = 32; alg = HopPlmVar_gen(H, filepath);tmp = Stg(alg);\n",
+    "using HopfieldDCA, Revise\n",
+    "filepath = \"../DataAttentionDCA/data/PF00014/PF00014_mgap6.fasta.gz\"; H = 32; alg = HopPlmVar_gen(H, filepath);\n",
     "n_ep = 3; η = 0.5; λ = 0.001;\n",
     "@time m,n = trainer_J(alg, n_ep, η = η, λ = λ);\n",
     "println(\"test_done\")\n"
@@ -29,6 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "using HopfieldDCA, Revise\n",
     "folders = [\"../DataAttentionDCA/data/PF00014/\",\n",
     "\"../DataAttentionDCA/data/PF00035/\",\n",
     "\"../DataAttentionDCA/data/PF00072/\",\n",
@@ -47,8 +48,23 @@
     "       \"../DataAttentionDCA/data/PF00677/PF00677_full.fasta\",\n",
     "       \"../DataAttentionDCA/data/PF00684/PF00684_full.fasta\",\n",
     "       \"../DataAttentionDCA/data/PF00763/PF00763_full.fasta\",\n",
-    "       \"../DataAttentionDCA/data/PF13354/PF13354_w0_ref_seqs.fasta.gz\"];\n",
-    "\n"
+    "       \"../DataAttentionDCA/data/PF13354/PF13354_w0_ref_seqs.fasta.gz\"]; structs = [\"../DataAttentionDCA/data/PF00014/PF00014_struct.dat\",\n",
+    "       \"../DataAttentionDCA/data/PF00035/Atomic_distances_PF00035.dat\",\n",
+    "       \"../DataAttentionDCA/data/PF00072/PF00072_struct.dat\",\n",
+    "       \"../DataAttentionDCA/data/PF00076/PF00076_struct.dat\",\n",
+    "       \"../DataAttentionDCA/data/PF00169/Atomic_distances_PF00169.dat\",\n",
+    "       \"../DataAttentionDCA/data/PF00595/PF00595_struct.dat\",\n",
+    "       \"../DataAttentionDCA/data/PF00677/Atomic_distances_PF00677.dat\",\n",
+    "       \"../DataAttentionDCA/data/PF00684/Atomic_distances_PF00684.dat\",\n",
+    "       \"../DataAttentionDCA/data/PF00763/Atomic_distances_PF00763.dat\",\n",
+    "       \"../DataAttentionDCA/data/PF13354/PF13354_struct.dat\"]; \n",
+    "idx = 1; filepath = seq_paths[idx]; H = 32; alg = HopPlmVar_gen(H, filepath); η = 0.5; λ = 0.001;\n",
+    "n_ep = 2; @time m,n = trainer_J(alg, n_ep, η = η, λ = λ, \n",
+    "    structfile = structs[idx],\n",
+    "    folder = folders[idx], \n",
+    "    savefile = folders[idx], \n",
+    "    fig_save = true, \n",
+    "    par_save = true);\n"
    ]
   },
   {
