--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -19,7 +19,7 @@
     "using HopfieldDCA, Revise\n",
     "filepath = \"../DataAttentionDCA/data/PF00014/PF00014_mgap6.fasta.gz\"; H = 32; alg = HopPlmVar_gen(H, filepath);\n",
     "n_ep = 3; η = 0.5; λ = 0.001;\n",
-    "@time m,n = trainer_J(alg, n_ep, η = η, λ = λ);\n",
+    "@time m,n = trainer_J(alg, n_ep, η = η, λ = λ, fig_save = true, );\n",
     "println(\"test_done\")\n"
    ]
   },
