implemented full hopfield

--- a/notebooks/tutorials.ipynb
+++ b/notebooks/tutorials.ipynb
@@ -22,7 +22,7 @@
     "    structfile = structs_dict[f],\n",
     "    folder = folders_dict[f], \n",
     "    savefile = folders_dict[f],\n",
-    "    orthog = true,\n",
+    "    orthog = false,\n",
     "    fig_save = true, \n",
     "    par_save = true);\n",
     "\n",
@@ -31,6 +31,15 @@
     "    structfile = structs_dict[f],\n",
     "    folder = folders_dict[f], \n",
     "    savefile = folders_dict[f], \n",
+    "    fig_save = true, \n",
+    "    par_save = true);\n",
+    "\n",
+    "\n",
+    "f = 14; H = 32; n_ep = 11; alg = HopPlmVar_full(H, seq_paths_dict[f], T = Float32); η = 0.5; λ = 0.001;  @time m,n = trainer_fullJ(alg, n_ep, η = η, λ = λ, \n",
+    "    structfile = structs_dict[f],\n",
+    "    folder = folders_dict[f], \n",
+    "    savefile = folders_dict[f],\n",
+    "    orthog = false,\n",
     "    fig_save = true, \n",
     "    par_save = true);\n",
     "\n",
